<resources>
    <string name="app_name">Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_positive">PositiveActivity</string>
    <string name="title_activity_negative">NegativeActivity</string>
    <string name="positive">Positive Activity</string>
    <string name="negative">Negative Activity</string>
    <string name="decision">你有新的提醒</string>
    <string name="positive_button">去看看</string>
    <string name="negative_button">知道了</string>
    <string name="alarm">报 警</string>
    <string name="statistics">统 计</string>
    <string name="sleep">睡眠</string>
    <string name="sport">运动</string>
    <string name="cry">哭闹</string>
    <string name="health">健康</string>
    <string name="hello_world">hello</string>
    <string name="title">易宝</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="welcome">易宝登录</string>
    <string name="user_name">手机</string>
    <string name="user_pass">密码</string>
    <string name="hello">Hello World, Login!</string>

    <string name="title_day">天</string>
    <string name="title_month">月</string>
    <string name="title_year">年</string>
    <string name="registerUserName">用户名</string>
    <string name="PwdHint">密码确认</string>
    <string name="pwd">密码</string>
    <string name="setPwdHint">密码长度为6~16位，数字、字母、字符必须包含至少两种</string>
    <string name="mobileHint">请输入11位手机号</string>
    <string name="mobile">手机号</string>
    <string name="logo">logo</string>
    <string name="add">提交</string>
    <string name="remember">记住用户</string>
    <string name="username">用户名</string>
    <string name="camId">扫描二维码或输入摄像头背面ID</string>
    <string name="cam">摄像头</string>
    <string name="name">宝贝名字</string>
    <string name="revise">修改</string>
    <string name="mobilehint">请输入手机号或易宝账号</string>
    <string name="pwdhint">请输入密码</string>
    <string name="forget">忘记密码？</string>
    <string name="valid">收不到验证码？</string>
    <string name="reget">重新获取</string>
    <string name="next">下一步</string>
    <string name="back">返回</string>
    <string name="autoLogon">自动登录</string>
    <string name="camIdHint">摄像头ID是16个字母的字符串</string>
    <string name="registerNameHint">请输入用户名</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">通用</string>

    <string name="pref_title_social_recommendations">使用推荐</string>
    <string name="pref_description_social_recommendations">推荐联系人</string>

    <string name="pref_title_display_name">显示名字</string>
    <string name="pref_default_display_name">ling</string>

    <string name="pref_title_add_friends_to_messages">添加朋友到信息</string>
    <string-array name="pref_example_list_titles">
        <item>总是</item>
        <item>在可能的情况下</item>
        <item>从不</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据同步</string>

    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 分钟</item>
        <item>30 分钟</item>
        <item>1 小时</item>
        <item>3 小时</item>
        <item>6 小时</item>
        <item>不同步</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">系统同步设置</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">新消息通知</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>

    <string name="pref_title_vibrate">震动</string>
    <string name="settings">个人设置</string>
    <string name="bobyName">请输入宝宝名字</string>
    <string name="quit">退出登录</string>
    <string name="clearcache">清除缓存</string>
    <string name="registerhint">还没有注册？</string>
    <string name="protocalhint">点击注册即表示您同意并愿意遵守易宝用户协议及隐私政策</string>
    <string name="county">国家/地区</string>
    <string name="validation">验证码</string>
    <string name="valiText">我们已经发送验证码到+86133xxxxXXXX,请输入短信中的验证码</string>
    <string name="UserHint">用户名少于20个字符</string>
    <string name="userhint1">您注册的手机号为133xxxxXXXX</string>
    <string name="userhint2">请设置您的用户名与密码</string>
    <string name="validhint">请输入验证码</string>
    <string name="pwdaggin">请确认密码</string>
    <string name="kids">我的宝宝</string>

</resources>
