<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingTop="@dimen/title_padding"
              android:layout_width="match_parent"
              android:paddingStart="@dimen/activity_vertical_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:text="@string/valiText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/validation"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/valid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/validhint"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/reget"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="2"
            android:background="@drawable/selector"
            android:text="@string/reget"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/gray"/>

    <Button
        android:id="@+id/bnFroget"
        android:text="@string/valid"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:background="@null"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35dp"/>

    <Button
        android:id="@+id/bnNext"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@drawable/selector"
        android:layout_margin="@dimen/margin"
        android:text="@string/next"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/bnBack"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:background="@drawable/shape_button"
        android:text="@string/back"/>
</LinearLayout>
