<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin">

            <TextView
                android:id="@+id/note2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userhint1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userhint2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/margin"
                    android:text="@string/registerUserName"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"/>

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLines = "1"
                    android:background="@null"
                    android:hint="@string/registerNameHint"
                    android:maxLength="20"
                    android:textColorHint="@color/gray"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/margin"
                android:text="@string/UserHint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pwd"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/pwdhint"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/gray"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PwdHint"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"/>

                <EditText
                    android:id="@+id/password0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/pwdaggin"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/gray"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin"
                android:text="@string/setPwdHint"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector"
            android:text="@string/add"/>
    </LinearLayout>
</LinearLayout>
