<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin">

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/logo"
                android:clickable="true"
                android:layout_margin="@dimen/margin"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:hint="@string/bobyName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="@color/gray"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/font_size"
                    android:textColor="@color/black"
                    android:text="@string/cam"/>

                <EditText
                    android:id="@+id/camId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:background="@null"
                    android:hint="@string/camId"
                    android:textColorHint="@color/gray"
                    android:maxLines="1"/>
                <ImageButton
                    android:id="@+id/scan"
                    android:layout_height="30sp"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:background="@mipmap/scan"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/gray"/>
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColorHint="@color/gray"
                android:hint="@string/camIdHint"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin">

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:gravity="center"
            android:background="@drawable/selector"
            android:text="@string/add"/>

        <Button
            android:id="@+id/revise"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:gravity="center"
            android:background="@drawable/selector"
            android:text="@string/revise"/>
    </RelativeLayout>
</LinearLayout>
