<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingTop="@dimen/title_padding"
              android:layout_width="match_parent"
              android:paddingStart="@dimen/activity_vertical_margin"
              android:paddingEnd="@dimen/activity_horizontal_margin"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/margin"
            android:text="@string/county"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/county"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:entries="@array/CountryCodes"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="@dimen/margin"
            android:text="@string/mobile"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_weight="1"
            android:background="@mipmap/right1"
            android:entries="@array/NumberHeader"/>

        <EditText
            android:id="@+id/mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/mobileHint"
            android:inputType="phone"
            android:padding="10dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/gray"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35dp"/>

    <Button
        android:id="@+id/bnReg1"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="@drawable/selector"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/protocalhint"/>
</LinearLayout>
