<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/unlog_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="34dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/mobie_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_drawer_mobile" />

            <ImageView
                android:id="@+id/qzone_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:src="@mipmap/ic_drawer_qzone" />

            <ImageView
                android:id="@+id/weibo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_drawer_weibo" />
        </LinearLayout>
        <TextView
            android:id="@+id/user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="登录后查看最新消息"
            android:textSize="11sp" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:orientation="vertical">
        <Button
            android:id="@+id/personalsettting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:gravity="start|center"
            android:text="@string/settings"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/gray"/>
        <Button
            android:id="@+id/clearcache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:gravity="start|center"
            android:text="@string/clearcache"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/gray"/>
        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:gravity="start|center"
            android:text="@string/quit"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/gray"/>
    </LinearLayout>
</LinearLayout>
